# cloud-dictionary

./: README.md  TODO.md  publish.sh  pyproject.toml  requirements.txt
.github/workflows/: install.yml  test.yml
src/cloud_dictionary/: __init__.py  main.py
src/magical_cloud_dictionary/: __init__.py  main.py
tests/: test_basic.py
